was able to fix double scroll issue

--- a/photo-portfolio/src/app/globals.css
+++ b/photo-portfolio/src/app/globals.css
@@ -1,11 +1,6 @@
-html,
-body {
-  max-width: 100vw;
+
+body, html {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(9,9,8);
 }
-
-body {
-  background: rgb(9,9,8);
-}
-
-
-
