--- a/photo-portfolio/src/components/BwLand/BwLand.module.css
+++ b/photo-portfolio/src/components/BwLand/BwLand.module.css
@@ -1,3 +1,4 @@
+
 .square1{
  
   background: linear-gradient(black, black) padding-box,
@@ -182,6 +183,8 @@
 }
 
 .filmcontainer{
+  overflow-y: hidden;
+  overflow-x: hidden;
   position: relative;
   width: 100%;
   height: 100%;
